2010-01-26  Alan McGovern  <amcgovern@novell.com>

	* bitmapimage.cpp: loader isn't a g_object anymore so just
	  delete it as opposed to g_object_unref'ing it.

2010-01-26  Alan McGovern  <amcgovern@novell.com>

	* bitmapimage.cpp: Create the ImageErrorEventArgs before we
	  clean up the loader, otherwise moon_error will be set to
	  NULL and the plugin will explode

2010-01-25  Andreia Gaita  <avidigal@novell.com>

	* pal/gtk/windowless-gtk.cpp: NPAPI symbol renaming

2010-01-25  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp (HitTest): check can find element when
	hittesting.

	* mediaelement.cpp, mediaelement.h: implement missing hittesting
	logic in mediaelement.

	This is a first pass at fixing bnc #542424
	
2010-01-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ChangeLog:
	* pipeline.cpp|h:
	* pipeline-asf.cpp|h:
	* mms-downloader.cpp|h: Move the parsing of mms metadata headers
	(asf headers) to the media thread, which also requires making it
	async (so that if something goes wrong the main thread doesn't
	deadlock). This fixes a rare race condition when the server started
	serving data before the pipeline was reading for receiving it.

	* type-generated.cpp: Regenerated.

2010-01-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp|h
	* pipeline-asf.cpp|h: Add the concept of dynamic playlist to Playlist,
	and for dynamic playlists only raise MediaEnded when the playlist
	instance has been informed that the playlist has ended. Otherwise we
	may end up raising MediaEnded when we reach the end of a playlist and
	we're just waiting for a streaming server to send the next entry.

2010-01-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: Call Underflowed if we detect that we won't get any data
	at all.

	* audio-pulse.cpp: OnWrite: recheck if we've been stopped after calling
	Write.

2010-01-19  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.cpp: Calling DO.ClearValue should follow